--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,12 +6,11 @@
         <div class="col-s-3 col-l-3 col-m-3">
             <app-sidebar></app-sidebar>
         </div>
-        <div class="col-s-9 col-l-9 col-m-9">
-            <router-outlet></router-outlet>
+
+        <div class="col-s-9 col-l-9 col-m-9"> 
+            <app-recipes></app-recipes>
         </div>
-    </div>  
-    
+    </div>
 </div>
-
+<!-- <router-outlet></router-outlet> -->
 <app-footer></app-footer>
-
