--- a/src/app/home/pages/recipes/recipes.component.html
+++ b/src/app/home/pages/recipes/recipes.component.html
@@ -1,34 +1,40 @@
+
 <section>
-    <div class="found_txt">
-        <p>Znaleziono {{recipes.Recipes.length}} recipes</p>
-    </div>
+    <ul *ngFor="let item of filteredCategory">
+        <!-- {{item.id}} -->
+        {{item.category}}
+    </ul>
+</section>
+
+<section *ngIf='recipes | search:search as filteredItems'>
+    <!-- <div *ngFor="let singleRecipes of filteredItems" >
+         {{singleRecipes.category}} 
+    </div> -->
+    <p class='recipes_found'>
+         {{filteredItems.length}} recipes found </p>
 </section>
 
 <section>
     <div>
         <div class="form-group">
-            <input class="search" type="text" placeholder="Czego szukasz..." name="search" [(ngModel)]="search">
+            <input class="search" type="text" placeholder="Find a recipe ...." name="search" [(ngModel)]="search">
             <i class="fa fa-search fa-lg" aria-hidden="true"></i>
         </div>
     </div>
 </section>
 
-
-
- <article>
-      <div *ngFor="let recipe of (recipes.Recipes | search:search ) ">
-        <div>
-            <ul>
-                <p class="recipe_name" >{{recipe.name}}</p>
-                <p class="ingredients_name">Ingredients</p>
+    <article>
+        <div *ngFor="let recipe of (recipes | search:search )">
+            <div>
+                <ul>
+                    <p class="recipe_name">{{recipe.name}}</p>
+                    <p class="ingredients_name">Ingredients</p>
                     <li class="ingredients">
                         <p>{{recipe.ingredients }}</p>
                     </li>
-                <p class="steps_name">Steps</p>
-                <li class="steps"> {{recipe.steps}}</li>
-                
-            </ul>
-        </div>
-    </div>  
-     <!-- <app-sidebar [name] = "recipes"></app-sidebar> -->
-</article> 
+                    <p class="steps_name">Steps</p>
+                    <li class="steps"> {{recipe.steps}}</li>
+                </ul>
+            </div>
+        </div>     
+    </article>
