--- a/src/app/shared/layout/footer/footer.component.scss
+++ b/src/app/shared/layout/footer/footer.component.scss
@@ -1,25 +1,29 @@
-#footer {
-  width: 100%;
+@import "~src/scss/variables";
 
+.footer {
+
+  width: 100%;
   background-color: rgba(241, 140, 45, 0.897);
+  margin-top: 4rem;
 
   ul {
-    width: 300px;
+    width: 600px;
     margin: 0 auto;
     padding: 0;
     display: flex;
     text-align: center;
 
     li {
-      width: 100px;
+      width: 200px;
       margin: 30px 0;
       list-style-type: none;
+      padding: 2rem 0;
 
       a {
         text-decoration: none;
         color: white;
-        font-size: 1.3rem;
-        font-weight: 600;
+        font-size: 1.5rem;
+        font-weight: $header_font;
       }
     }
   }
