--- a/src/app/shared/layout/header/header.component.scss
+++ b/src/app/shared/layout/header/header.component.scss
@@ -5,19 +5,20 @@
 
   .row{
     height: 100%;
+    
   
     .imageHeader {
       width: 100%;
       height: 100%;
       background: url("../../../../assets/images/cook11.jpg") no-repeat center;
       background-size: cover;
-      // text-align: center;
       overflow: auto;
+      
   
       h1 {
         color: $header_font_color;
         position: absolute;
-        margin-left: 20%;
+        margin-left: 15%;
         margin-top: 7%;
         font-weight: bold;
       }
@@ -25,15 +26,13 @@
       h5 {
         color: $header_font_color;
         position: absolute;
-        margin-left: 20%;
-        margin-top: 10%;
-        font-weight: 400;
+        margin-left: 18%;
+        margin-top: 12%;
+        font-weight: $header_font_middle;
         font-style: italic;
       }
     }
-  
-  }
-      
+  }   
 }
 
   
