--- a/src/app/shared/layout/navbar/navbar.component.html
+++ b/src/app/shared/layout/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav id="nav">
   <div class="row">
     <ul>
-      <li><a href="">RECIPES</a></li>
+      <li class="logo"><a href="">RECIPES</a></li>
       <li><a routerLink='/routePath' routerLinkActive="router-link-active">Home<i class="fa fa-home" aria-hidden="true"></i></a></li>
       <li><a href="#">New</a> </li>
       <li><a href="#">Recipes</a> </li>
@@ -10,4 +10,3 @@
   </div>
 </nav>
 
-<!-- <a routerLink="routePath" class="navbar-brand">RECIPES</a> -->
