--- a/src/app/shared/layout/navbar/navbar.component.scss
+++ b/src/app/shared/layout/navbar/navbar.component.scss
@@ -2,8 +2,11 @@
 
 #nav {
   width: 100%;
-  // height: 80px;
-  padding: 20px 0;
+  padding: 2.5rem 0;
+
+  .logo{
+
+  }
 
   ul {
     width: 80%;
@@ -18,14 +21,17 @@
 
       &:first-child > a {
         color: brown;
+        margin-left: -5rem;
+       // margin-right: 0;
         font-size: 2rem;
-        font-weight: 600;
+        font-weight: $header_font;
         line-height: .7;
     
         &:hover {
          
         }
       }
+      
       a {
         text-decoration: none;
         font-size: 1.1rem;
@@ -44,7 +50,6 @@
 
          &:hover{
            
-          
          }
         }
       }
