--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,5 +5,7 @@ $line_height: 1.4;
 $line_height_aside: 1.8;
 $margin_name_recipe: 2rem;
 $margin_ingredients_name:1rem;
+$header_font: 700;
+$header_font_middle: 400;
 
 
